# GIAIC-Generative-AI

./: README.md
Assignments/Agentic SDK Assignments July 14/: country_info_toolkit.py  main.py  mood_handoff.py  product_suggester.py  pyproject.toml
Assignments/Assignment-02/: main.py  pyproject.toml
Assignments/Assignment-3/: main.py  pyproject.toml
Hello-agent/: main.py
Practice/Orchestration workflow/: orchestration-workflow.py  pyproject.toml  sk.md
agent/: main.py  pyproject.toml
ai_agents_first/00_swarm/: readme.md
ai_agents_first/00_swarm /: README.md
ai_agents_first/01_uv/: README.md
ai_agents_first/02-openrouter-project/: README.md
ai_agents_first/04_hello_agent/: main.py  pyproject.toml
ai_agents_first/05_model_configuration/: README.md  async-low-level.py  global-config.py  main.py  pyproject.toml  run-level-config.py
ai_agents_first/06_basic_tools/: main.py  pyproject.toml
ai_agents_first/07_model_settings/: example.py  main.py  max-tokens.py  parallel-tool.py  pyproject.toml  tool-choice.py
ai_agents_first/09_dynamic_instructions/: main.py  pyproject.toml
ai_agents_first/11_handoffs/: main.py  pyproject.toml
ai_agents_first/my-chainlit-project/: main.py  pyproject.toml  requirements.tsx
ai_agents_first/tool-call-agent/: main.py
ai_agents_first/tool-calling-agent/: main.py  pyproject.toml
basic-agent/: pyproject.toml
basic-agent/src/ai-agent/: __init__.py
daca_agent_native_dev/FastAPI/: main.py  requirements.txt
daca_agent_native_dev/Pydantic/: pyproject.toml
fastdca-p1/: README.md
(+8 files in other folders)
