[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.2",
]

[project.scripts]
ai-agent = "ai_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
